@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0


class Company {

}

class Ship{
-MMSI
-name
-IMO
-callsign
-type
-length
-width
-draft
}

class ShipPosition {
   -shipMMSI
   -date
   -latitude
   -longitude
   -sog
   -cog
   -heading
   -cargo
   -transciever
}

class TrafficManager{
}

TrafficManager "*" -- "1" Company : knows <
TrafficManager "1" -- "*" Ship : manages >
Company "1" -- "*" Ship : owns >
Ship "1" -- "*" ShipPosition : has >
@enduml